fixed notice document overflow

--- a/src/assets/pages/notice/notice.css
+++ b/src/assets/pages/notice/notice.css
@@ -64,6 +64,7 @@ thead {
   width: 65%;
   height: 100%;
   background-color: white;
+  overflow-y: scroll;
 }
 .commentsmodal {
   height: 100%;
